parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARACTER
    FLOTANTE

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> PROGRAMA IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ Sentencias Terminar LLAVE_DER
Rule 2     Sentencias -> Sentencia
Rule 3     Sentencias -> Sentencias Sentencia
Rule 4     Sentencia -> Declaracion
Rule 5     Sentencia -> Asignacion
Rule 6     Sentencia -> Imprimir
Rule 7     Sentencia -> Leer
Rule 8     Sentencia -> Mientras
Rule 9     Sentencia -> Si
Rule 10    Leer -> LEER IDENTIFICADOR PUNTO_Y_COMA
Rule 11    Imprimir -> IMPRIMIR PARENTESIS_IZQ ContenidoImprimir PARENTESIS_DER PUNTO_Y_COMA
Rule 12    ContenidoImprimir -> TEXTO
Rule 13    ContenidoImprimir -> IDENTIFICADOR
Rule 14    ContenidoImprimir -> ContenidoImprimir COMA ContenidoImprimir
Rule 15    Declaracion -> Tipo ListaIdentificadores PUNTO_Y_COMA
Rule 16    Declaracion -> Tipo IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
Rule 17    Tipo -> INT
Rule 18    Tipo -> FLOAT
Rule 19    Tipo -> CHAR
Rule 20    ListaIdentificadores -> IDENTIFICADOR
Rule 21    ListaIdentificadores -> ListaIdentificadores COMA IDENTIFICADOR
Rule 22    Asignacion -> IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
Rule 23    Expresion -> NUMERO
Rule 24    Expresion -> IDENTIFICADOR
Rule 25    Expresion -> Expresion SUMA Expresion
Rule 26    Expresion -> Expresion RESTA Expresion
Rule 27    Expresion -> Expresion MULTIPLICACION Expresion
Rule 28    Expresion -> Expresion DIVISION Expresion
Rule 29    Mientras -> MIENTRAS PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
Rule 30    Si -> SI PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
Rule 31    Si -> SI PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER SINO LLAVE_IZQ Sentencias LLAVE_DER
Rule 32    Condicion -> Expresion MENOR Expresion
Rule 33    Condicion -> Expresion MENOR_IGUAL Expresion
Rule 34    Condicion -> Expresion MAYOR Expresion
Rule 35    Condicion -> Expresion MAYOR_IGUAL Expresion
Rule 36    Condicion -> Expresion IGUAL_IGUAL Expresion
Rule 37    Condicion -> Expresion DISTINTO Expresion
Rule 38    Condicion -> Condicion AND_COR Condicion
Rule 39    Condicion -> Condicion AND_LAR Condicion
Rule 40    Condicion -> Condicion OR_COR Condicion
Rule 41    Condicion -> Condicion OR_LAR Condicion
Rule 42    Terminar -> TERMINAR PUNTO_Y_COMA

Terminals, with rules where they appear

AND_COR              : 38
AND_LAR              : 39
CARACTER             : 
CHAR                 : 19
COMA                 : 14 21
DISTINTO             : 37
DIVISION             : 28
FLOAT                : 18
FLOTANTE             : 
IDENTIFICADOR        : 1 10 13 16 20 21 22 24
IGUAL                : 16 22
IGUAL_IGUAL          : 36
IMPRIMIR             : 11
INT                  : 17
LEER                 : 10
LLAVE_DER            : 1 29 30 31 31
LLAVE_IZQ            : 1 29 30 31 31
MAYOR                : 34
MAYOR_IGUAL          : 35
MENOR                : 32
MENOR_IGUAL          : 33
MIENTRAS             : 29
MULTIPLICACION       : 27
NUMERO               : 23
OR_COR               : 40
OR_LAR               : 41
PARENTESIS_DER       : 1 11 29 30 31
PARENTESIS_IZQ       : 1 11 29 30 31
PROGRAMA             : 1
PUNTO_Y_COMA         : 10 11 15 16 22 42
RESTA                : 26
SI                   : 30 31
SINO                 : 31
SUMA                 : 25
TERMINAR             : 42
TEXTO                : 12
error                : 

Nonterminals, with rules where they appear

Asignacion           : 5
Condicion            : 29 30 31 38 38 39 39 40 40 41 41
ContenidoImprimir    : 11 14 14
Declaracion          : 4
Expresion            : 16 22 25 25 26 26 27 27 28 28 32 32 33 33 34 34 35 35 36 36 37 37
Imprimir             : 6
Leer                 : 7
ListaIdentificadores : 15 21
Mientras             : 8
Programa             : 0
Sentencia            : 2 3
Sentencias           : 1 3 29 30 31 31
Si                   : 9
Terminar             : 1
Tipo                 : 15 16

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . PROGRAMA IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ Sentencias Terminar LLAVE_DER

    PROGRAMA        shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> PROGRAMA . IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ Sentencias Terminar LLAVE_DER

    IDENTIFICADOR   shift and go to state 3


state 3

    (1) Programa -> PROGRAMA IDENTIFICADOR . PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ Sentencias Terminar LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 4


state 4

    (1) Programa -> PROGRAMA IDENTIFICADOR PARENTESIS_IZQ . PARENTESIS_DER LLAVE_IZQ Sentencias Terminar LLAVE_DER

    PARENTESIS_DER  shift and go to state 5


state 5

    (1) Programa -> PROGRAMA IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER . LLAVE_IZQ Sentencias Terminar LLAVE_DER

    LLAVE_IZQ       shift and go to state 6


state 6

    (1) Programa -> PROGRAMA IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ . Sentencias Terminar LLAVE_DER
    (2) Sentencias -> . Sentencia
    (3) Sentencias -> . Sentencias Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . Imprimir
    (7) Sentencia -> . Leer
    (8) Sentencia -> . Mientras
    (9) Sentencia -> . Si
    (15) Declaracion -> . Tipo ListaIdentificadores PUNTO_Y_COMA
    (16) Declaracion -> . Tipo IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
    (22) Asignacion -> . IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
    (11) Imprimir -> . IMPRIMIR PARENTESIS_IZQ ContenidoImprimir PARENTESIS_DER PUNTO_Y_COMA
    (10) Leer -> . LEER IDENTIFICADOR PUNTO_Y_COMA
    (29) Mientras -> . MIENTRAS PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
    (30) Si -> . SI PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
    (31) Si -> . SI PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER SINO LLAVE_IZQ Sentencias LLAVE_DER
    (17) Tipo -> . INT
    (18) Tipo -> . FLOAT
    (19) Tipo -> . CHAR

    IDENTIFICADOR   shift and go to state 7
    IMPRIMIR        shift and go to state 17
    LEER            shift and go to state 18
    MIENTRAS        shift and go to state 19
    SI              shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23

    Sentencias                     shift and go to state 8
    Sentencia                      shift and go to state 9
    Declaracion                    shift and go to state 10
    Asignacion                     shift and go to state 11
    Imprimir                       shift and go to state 12
    Leer                           shift and go to state 13
    Mientras                       shift and go to state 14
    Si                             shift and go to state 15
    Tipo                           shift and go to state 16

state 7

    (22) Asignacion -> IDENTIFICADOR . IGUAL Expresion PUNTO_Y_COMA

    IGUAL           shift and go to state 24


state 8

    (1) Programa -> PROGRAMA IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ Sentencias . Terminar LLAVE_DER
    (3) Sentencias -> Sentencias . Sentencia
    (42) Terminar -> . TERMINAR PUNTO_Y_COMA
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . Imprimir
    (7) Sentencia -> . Leer
    (8) Sentencia -> . Mientras
    (9) Sentencia -> . Si
    (15) Declaracion -> . Tipo ListaIdentificadores PUNTO_Y_COMA
    (16) Declaracion -> . Tipo IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
    (22) Asignacion -> . IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
    (11) Imprimir -> . IMPRIMIR PARENTESIS_IZQ ContenidoImprimir PARENTESIS_DER PUNTO_Y_COMA
    (10) Leer -> . LEER IDENTIFICADOR PUNTO_Y_COMA
    (29) Mientras -> . MIENTRAS PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
    (30) Si -> . SI PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
    (31) Si -> . SI PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER SINO LLAVE_IZQ Sentencias LLAVE_DER
    (17) Tipo -> . INT
    (18) Tipo -> . FLOAT
    (19) Tipo -> . CHAR

    TERMINAR        shift and go to state 27
    IDENTIFICADOR   shift and go to state 7
    IMPRIMIR        shift and go to state 17
    LEER            shift and go to state 18
    MIENTRAS        shift and go to state 19
    SI              shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23

    Terminar                       shift and go to state 25
    Sentencia                      shift and go to state 26
    Declaracion                    shift and go to state 10
    Asignacion                     shift and go to state 11
    Imprimir                       shift and go to state 12
    Leer                           shift and go to state 13
    Mientras                       shift and go to state 14
    Si                             shift and go to state 15
    Tipo                           shift and go to state 16

state 9

    (2) Sentencias -> Sentencia .

    TERMINAR        reduce using rule 2 (Sentencias -> Sentencia .)
    IDENTIFICADOR   reduce using rule 2 (Sentencias -> Sentencia .)
    IMPRIMIR        reduce using rule 2 (Sentencias -> Sentencia .)
    LEER            reduce using rule 2 (Sentencias -> Sentencia .)
    MIENTRAS        reduce using rule 2 (Sentencias -> Sentencia .)
    SI              reduce using rule 2 (Sentencias -> Sentencia .)
    INT             reduce using rule 2 (Sentencias -> Sentencia .)
    FLOAT           reduce using rule 2 (Sentencias -> Sentencia .)
    CHAR            reduce using rule 2 (Sentencias -> Sentencia .)
    LLAVE_DER       reduce using rule 2 (Sentencias -> Sentencia .)


state 10

    (4) Sentencia -> Declaracion .

    TERMINAR        reduce using rule 4 (Sentencia -> Declaracion .)
    IDENTIFICADOR   reduce using rule 4 (Sentencia -> Declaracion .)
    IMPRIMIR        reduce using rule 4 (Sentencia -> Declaracion .)
    LEER            reduce using rule 4 (Sentencia -> Declaracion .)
    MIENTRAS        reduce using rule 4 (Sentencia -> Declaracion .)
    SI              reduce using rule 4 (Sentencia -> Declaracion .)
    INT             reduce using rule 4 (Sentencia -> Declaracion .)
    FLOAT           reduce using rule 4 (Sentencia -> Declaracion .)
    CHAR            reduce using rule 4 (Sentencia -> Declaracion .)
    LLAVE_DER       reduce using rule 4 (Sentencia -> Declaracion .)


state 11

    (5) Sentencia -> Asignacion .

    TERMINAR        reduce using rule 5 (Sentencia -> Asignacion .)
    IDENTIFICADOR   reduce using rule 5 (Sentencia -> Asignacion .)
    IMPRIMIR        reduce using rule 5 (Sentencia -> Asignacion .)
    LEER            reduce using rule 5 (Sentencia -> Asignacion .)
    MIENTRAS        reduce using rule 5 (Sentencia -> Asignacion .)
    SI              reduce using rule 5 (Sentencia -> Asignacion .)
    INT             reduce using rule 5 (Sentencia -> Asignacion .)
    FLOAT           reduce using rule 5 (Sentencia -> Asignacion .)
    CHAR            reduce using rule 5 (Sentencia -> Asignacion .)
    LLAVE_DER       reduce using rule 5 (Sentencia -> Asignacion .)


state 12

    (6) Sentencia -> Imprimir .

    TERMINAR        reduce using rule 6 (Sentencia -> Imprimir .)
    IDENTIFICADOR   reduce using rule 6 (Sentencia -> Imprimir .)
    IMPRIMIR        reduce using rule 6 (Sentencia -> Imprimir .)
    LEER            reduce using rule 6 (Sentencia -> Imprimir .)
    MIENTRAS        reduce using rule 6 (Sentencia -> Imprimir .)
    SI              reduce using rule 6 (Sentencia -> Imprimir .)
    INT             reduce using rule 6 (Sentencia -> Imprimir .)
    FLOAT           reduce using rule 6 (Sentencia -> Imprimir .)
    CHAR            reduce using rule 6 (Sentencia -> Imprimir .)
    LLAVE_DER       reduce using rule 6 (Sentencia -> Imprimir .)


state 13

    (7) Sentencia -> Leer .

    TERMINAR        reduce using rule 7 (Sentencia -> Leer .)
    IDENTIFICADOR   reduce using rule 7 (Sentencia -> Leer .)
    IMPRIMIR        reduce using rule 7 (Sentencia -> Leer .)
    LEER            reduce using rule 7 (Sentencia -> Leer .)
    MIENTRAS        reduce using rule 7 (Sentencia -> Leer .)
    SI              reduce using rule 7 (Sentencia -> Leer .)
    INT             reduce using rule 7 (Sentencia -> Leer .)
    FLOAT           reduce using rule 7 (Sentencia -> Leer .)
    CHAR            reduce using rule 7 (Sentencia -> Leer .)
    LLAVE_DER       reduce using rule 7 (Sentencia -> Leer .)


state 14

    (8) Sentencia -> Mientras .

    TERMINAR        reduce using rule 8 (Sentencia -> Mientras .)
    IDENTIFICADOR   reduce using rule 8 (Sentencia -> Mientras .)
    IMPRIMIR        reduce using rule 8 (Sentencia -> Mientras .)
    LEER            reduce using rule 8 (Sentencia -> Mientras .)
    MIENTRAS        reduce using rule 8 (Sentencia -> Mientras .)
    SI              reduce using rule 8 (Sentencia -> Mientras .)
    INT             reduce using rule 8 (Sentencia -> Mientras .)
    FLOAT           reduce using rule 8 (Sentencia -> Mientras .)
    CHAR            reduce using rule 8 (Sentencia -> Mientras .)
    LLAVE_DER       reduce using rule 8 (Sentencia -> Mientras .)


state 15

    (9) Sentencia -> Si .

    TERMINAR        reduce using rule 9 (Sentencia -> Si .)
    IDENTIFICADOR   reduce using rule 9 (Sentencia -> Si .)
    IMPRIMIR        reduce using rule 9 (Sentencia -> Si .)
    LEER            reduce using rule 9 (Sentencia -> Si .)
    MIENTRAS        reduce using rule 9 (Sentencia -> Si .)
    SI              reduce using rule 9 (Sentencia -> Si .)
    INT             reduce using rule 9 (Sentencia -> Si .)
    FLOAT           reduce using rule 9 (Sentencia -> Si .)
    CHAR            reduce using rule 9 (Sentencia -> Si .)
    LLAVE_DER       reduce using rule 9 (Sentencia -> Si .)


state 16

    (15) Declaracion -> Tipo . ListaIdentificadores PUNTO_Y_COMA
    (16) Declaracion -> Tipo . IDENTIFICADOR IGUAL Expresion PUNTO_Y_COMA
    (20) ListaIdentificadores -> . IDENTIFICADOR
    (21) ListaIdentificadores -> . ListaIdentificadores COMA IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 29

    ListaIdentificadores           shift and go to state 28

state 17

    (11) Imprimir -> IMPRIMIR . PARENTESIS_IZQ ContenidoImprimir PARENTESIS_DER PUNTO_Y_COMA

    PARENTESIS_IZQ  shift and go to state 30


state 18

    (10) Leer -> LEER . IDENTIFICADOR PUNTO_Y_COMA

    IDENTIFICADOR   shift and go to state 31


state 19

    (29) Mientras -> MIENTRAS . PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 32


state 20

    (30) Si -> SI . PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER
    (31) Si -> SI . PARENTESIS_IZQ Condicion PARENTESIS_DER LLAVE_IZQ Sentencias LLAVE_DER SINO LLAVE_IZQ Sentencias LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 33


state 21

    (17) Tipo -> INT .

    IDENTIFICADOR   reduce using rule 17 (Tipo -> INT .)


state 22

    (18) Tipo -> FLOAT .

    IDENTIFICADOR   reduce using rule 18 (Tipo -> FLOAT .)


state 23

    (19) Tipo -> CHAR .

    IDENTIFICADOR   reduce using rule 19 (Tipo -> CHAR .)


state 24

    (22) Asignacion -> IDENTIFICADOR IGUAL . Expresion PUNTO_Y_COMA
    (23) Expresion -> . NUMERO
    (24) Expresion -> . IDENTIFICADOR
    (25) Expresion -> . Expresion SUMA Expresion
    (26) Expresion -> . Expresion RESTA Expresion
    (27) Expresion -> . Expresion MULTIPLICACION Expresion
    (28) Expresion -> . Expresion DIVISION Expresion

    NUMERO          shift and go to state 36
    IDENTIFICADOR   shift and go to state 34

    Expresion                      shift and go to state 35

state 25

    (1) Programa -> PROGRAMA IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ Sentencias Terminar . LLAVE_DER

    LLAVE_DER       shift and go to state 37


state 26

    (3) Sentencias -> Sentencias Sentencia .

    TERMINAR        reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    IDENTIFICADOR   reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    IMPRIMIR        reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    LEER            reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    MIENTRAS        reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    SI              reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    INT             reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    FLOAT           reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    CHAR            reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    LLAVE_DER       reduce using rule 3 (Sentencias -> Sentencias Sentencia .)


state 27

    (42) Terminar -> TERMINAR . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 38


state 28
